Alpha 7

- Added channels and piping for liquid flow between tiles
- Added water pump furniture to extract liquid from river and pump into pipes
- Added well furniture for usage of pumped water
- Added power generating furniture - windmill and water wheel
- Added mechanical power grid system for transfer of power between producers and consumers (such as windmill and water pump)
- Ore crusher now requires power to operate, or else it will take significantly longer
- Updated dirt floor texture
- Fixed particle effects on furniture in use like Ore Crusher
- Made settlers eat rations before other edible items in inventory

Alpha 6.1.7 - 5th September 2021

- Fire extinguish designations spread with fire
- Fire extinguish designation defaults job to top priority
- Increased settler rotation speed to avoid getting stuck in circles

Alpha 6.1.6 - 23rd August 2021

- Fixed an issue when displayed a settler with some needs missing

Alpha 6.1.5 - 21st August 2021

- Fix for a rare crash for when furniture is damaged

Alpha 6.1.4 - 17th August 2021

- Fix for a rare crash when pathfinding over dead bodies

Alpha 6.1.3 - 17th August 2021

- Fix for crash from change below - lightning strikes not triggering fire notifications

Alpha 6.1.2 - 16th August 2021

- Snow on ground will no longer trigger tilling jobs to be created
- Fire notifications are not sent when the current weather can cause lightning strikes

Alpha 6.1.1 - 15th August 2021

- Fix for a bug where rations where often being lost while a dwarf attempted to eat them, they will be a bit more careful with their food now
- Fix for crash when clicking around after starting settlement spawn

Alpha 6.1 - 12th August 2021

- Fix for crash from mushroom logs
- Displaying map seed on main menu

Alpha 6 - 9th August 2021

- !FIRE! Fires can now be started by rogue sparks and flames (which should be rare) and there's a new order to attempt to put out fires