@@ -9,7 +9,7 @@
   "definitions/crafting/liquidProductionDefaults.json" : -272342540757966285,
   "definitions/designations.json" : 2382584353611756808,
   "definitions/entityAssets/entityAssetTypes.json" : 2897978411608797010,
-  "definitions/entityAssets/furnitureEntityAssets.json" : 1865820514843546827,
+  "definitions/entityAssets/furnitureEntityAssets.json" : 1839954270121163836,
   "definitions/entityAssets/humanoidEntityAssets.json" : -8280725156995747217,
   "definitions/entityAssets/itemEntityAssets.json" : -5112540658497982533,
   "definitions/entityAssets/mechanismEntityAssets.json" : -4979373180532028072,
@@ -59,7 +59,7 @@
   "tilesets/gui.atlas" : 9081960960675053591,
   "tilesets/masks.atlas" : -7267469657370952532,
   "tilesets/terrain.atlas" : 8950025147213891512,
-  "translations/collated.csv" : 3266012835924406793,
+  "translations/collated.csv" : 6119717716784865427,
   "translations/languages.json" : 8557385612734997329,
   "ui/cursors/*.png" : -5585657859447382791,
   "ui/fonts/*.ttf" : -7287232856992254877,
