@@ -62,6 +62,10 @@ CROP.AFFLICTED_BY_PESTS,Afflicted by pests,,Von Schädlingen befallen,Infesté d
 CROP.AFFLICTED_BY_PESTS.TOOLTIP,This crop has been afflicted by an excessive number of aphids and other insects which need to be removed by a {{PROFESSION.FARMER}} before it can flourish again. Not removing the pests in time could mean that this crop dies!,,"Diese Pflanze ist von einer hohen Anzahl an Blattläusen und anderen Insekten befallen, die von einem {{PROFESSION.FARMER}} entfernt werden müssen bevor sie wieder gedeihen kann. Die Pflanze kann sterben wenn die Schädlinge nicht rechtzeitig entfernt werden!",Cette culture a été contaminée par un nombre excessif de pucerons et d'autres insectes qui doivent être enlevés par un {{PROFESSIONN.FARMER}} avant de pouvoir prospérer à nouveau. Ne pas enlever les nuisibles à temps pourrait signifier que cette récolte va mourir!,Questa coltura è stata afflitta da un numero eccessivo di afidi e altri insetti che devono essere rimossi da un {{PROFESSION.FARMER}} prima che possa prosperare nuovamente. Non rimuovere i parassiti in tempo potrebbe significare che questo raccolto muore!,Este cultivo ha sido afectado por un número excesivo de áfidos y otros insectos que necesitan ser removidos por un {{PROFESSION.FARMER}} antes de que pueda florecer de nuevo. No eliminar las plagas a tiempo podría significar que esta cosecha muere!,Esta cultura foi aflita por um número excessivo de pulgões e outros insetos que precisam ser removidos por um {{PROFISSION.FARMER}} antes que possa florescer novamente. Não remover as pragas no tempo pode significar que esta colheita morre!,,,"Эта культура страдает от чрезмерного количества тлей и других насекомых, которые необходимо удалить {{PROFESSION.FARMER}}, прежде чем она сможет снова процветать. Неудаление вредителей во времени может означать, что эта культура умирает!",Bu bitki aşırı böceklenmiş veya zararlı otlarla sarılmış. Tekrar mahsül verebilmesi için önce {{PROFESSION.FARMER}} tarafından temizlenmesi gerekiyor. Dikkat! Hastallığın temizlenmemesi bitkinin ölmesi demek olabilir!,"Denne afgrød er ramt af en stor mængde bladlus og andre insekter, som skal fjernes af {{PROFESSION.FARMER}} før den kan blomstre igen. Hvis ikke, kan planten dø efter tilstrækkelig tid!",,Denna gröda har drabbats av ett alltför stort antal bladlöss och andra insekter som måste avlägsnas av en {{PROFER.FARMER}} innan den kan blomstra igen. Att inte ta bort skadedjur i tid kan innebära att denna gröda dör!,,,,この作物は、それが再び繁栄する前に {{PROFESSION.FARMER}} によって除去する必要があるアブラムシや他の昆虫の過剰な数によって苦しんでいます。 時間内に害虫を除去しないことは、この作物が死ぬことを意味する可能性があります!,这种作物受到了大量蚜虫和其他昆虫的影响，这些昆虫需要通过 {{PROFESSION.FARMER}} 去除才能再次繁荣。 不去除害虫的时间可能意味着这种作物死亡！,"이 작물은 지나치게 많은 진딧물과 다른 곤충에 시달렸으며, 다시 번성하기 전에 {{PROFESSION.FARMER}} 에 의해 제거되어야 합니다. 시간에 해충을 제거하지 않는이 작물이 죽는 것을 의미 할 수있다!"
 CROP.DESCRIPTION,{{materialType.noun}} plant,,{{materialType.noun}}-Pflanze,Plante:{{materialType.noun}},{{materialType.noun}},{{materialType.noun}},Planta {{materialType.noun}},plantação de {{materialType.noun}},,Растение: {{materialType.noun}},{{materialType.noun}} bitkisi,{{materialType.noun}} plante,,{{MaterialType.noun}} växt,,,,{{materialType.noun}} 名詞,{材料型. 名词}} 植物,{{materialType.noun}} 식물
 CROP.HARVEST_PROGRESS,Progress towards harvest: {{progress}}%,,Reifungsprozess: {{progress}} %,Progression avant récolte: {{progress}}%,Progresso della raccolta: {{progress}}%,Progreso de la cosecha: {{progress}} %,Progresso até à colheita: {{progress}}%,Progressão até a colheita: {{progress}}%,,Прогресс до сбора урожая: {{progress}}%,Hasada hazırlık: {{progress}}%,Fremskridt mod høst: {{progress}}%,,Framsteg mot skörd: {{framsteg}}%,,,,収穫に向けた進捗状況:{{progress}}%,收获方面的进展：{{progress}}%,수확을 향한 진전: {{progress}}%
+CROP.MOISTURE_STATE.DROUGHTED,This plant has no access to water for a long time and has stopped growing,,,,,,,,,,,,,,,,,,,
+CROP.MOISTURE_STATE.NEEDS_WATERING,This plant has not been watered and is growing slowly,,,,,,,,,,,,,,,,,,,
+CROP.MOISTURE_STATE.NEEDS_WATERING.TOOLTIP,You can irrigate your crops with a channel containing water with 2 tiles.,,,,,,,,,,,,,,,,,,,
+CROP.MOISTURE_STATE.WATERED,This plant has been watered recently and is growing quickly,,,,,,,,,,,,,,,,,,,
 
 DEATH_REASON.BURNING,Burning,,,,,,,,,,,,,,,,,,,
 DEATH_REASON.CRUSHED_BY_FALLING_DEBRIS,Falling debris,,Fallende Trümmer,Débris tombant,Detriti che cadono,Desechos que caen,Detritos caindo,,,Падающий мусор,Heyelan,Faldene vragrester,,Fallande skräp,,,,落下残骸,落碎片,떨어지는 파편
