@@ -60,6 +60,10 @@ CRAFTING_TYPE.WORT_BREWING,,Brewing,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,
 CROP.AFFLICTED_BY_PESTS,For when a crop plant is infested with insects and other pests and needs some work to remove them,Afflicted by pests,Infesté de nuisibles,Infestado por plaga,Von Schädlingen befallen,Infestato dai parassiti,Infestação de pragas,Atacado por pragas,Поражено вредителями,Zaatakowane przez szkodniki,,,,,
 CROP.AFFLICTED_BY_PESTS.TOOLTIP,,This crop has been afflicted by an excessive number of aphids and other insects which need to be removed by a {{PROFESSION.FARMER}} before it can flourish again. Not removing the pests in time could mean that this crop dies!,,,,,,,,,,,,,
+CROP.MOISTURE_STATE.WATERED,,This plant has been watered recently and is growing quickly,,,,,,,,,,,,,
+CROP.MOISTURE_STATE.NEEDS_WATERING,,This plant has not been watered and is growing slowly,,,,,,,,,,,,,
+CROP.MOISTURE_STATE.NEEDS_WATERING.TOOLTIP,,You can irrigate your crops with a channel containing water with 2 tiles.,,,,,,,,,,,,,
+CROP.MOISTURE_STATE.DROUGHTED,,This plant has no access to water for a long time and has stopped growing,,,,,,,,,,,,,
 CROP.DESCRIPTION,,{{materialType.noun}} plant,Plant :{{materialType.noun}},{{materialType.noun}},{{materialType.noun}}-Pflanze,{{materialType.noun}},plantação de {{materialType.noun}},Planta {{materialType.noun}},Растение: {{materialType.noun}},Roślina {{materialType.noun}},,,,,
 CROP.HARVEST_PROGRESS,E.g. “Progress towards harvest: 30%”,Progress towards harvest: {{progress}}%,Progression avant récolte : {{progress}} %,Progreso de la cosecha: {{progress}} %,Reifungsprozess: {{progress}} %,Progresso della raccolta: {{progress}}%,Progressão até a colheita: {{progress}}%,Progresso até à colheita: {{progress}}%,Прогресс до сбора урожая: {{progress}}%,Postępy zbierania: {{progress}}%,,,,,
 ,,,,,,,,,,,,,,,
