@@ -5,10 +5,12 @@ Alpha 7
 - Added well furniture for usage of pumped water
 - Added power generating furniture - windmill and water wheel
 - Added mechanical power grid system for transfer of power between producers and consumers (such as windmill and water pump)
+- Plants now require water to grow, which can be provided by rain or nearby irrigation channels containing water
 - Ore crusher now requires power to operate, or else it will take significantly longer
 - Updated dirt floor texture
 - Fixed particle effects on furniture in use like Ore Crusher
 - Made settlers eat rations before other edible items in inventory
+- Made lightning very unlikely to strike plants other than trees
 
 Alpha 6.1.7 - 5th September 2021
 
